--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Promek Game Privacy Policy
-description:  Promek Game Privacy Policy.
+title: Promek Privacy Policy
+description:  Promek Privacy Policy.
